[package]
name = "problem_solving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = "0.4.1"
funty = {version = "2.0.0", optional = true}


[features]
default = ["array"]
patterns =[]
maths =[]
recursion=[]
list=[]
sort=[]
array=["medium", "mergeSort","other"]
#dep:funty not required
easy=[]
medium=[]
hard=[]
other=[]

mergeSort =[]