[package]
name = "problem_solving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = "0.4.1"
funty = {version = "2.0.0", optional = true}
num = {version="0.4.0", optional = true}


[features]
# default = ["binarySearch", "hashing", "linkedList"]
default = ["linkedList", "tree", "stack", "queue"]
patterns =[]
maths =[]
recursion=[]
list=[]
sort=[]
array=["medium", "mergeSort","other", ]
binarySearch = ["easy","medium"]
hashing=[]
linkedList = []
tree=[]
stack=[]
queue=[]

#dep:funty not required
# "dep:num"

easy=[]
medium=[]
hard=[]
other=[]

mergeSort =[]